# Tutorials

./: pyproject.toml
PyMC/tests/: test_pymc.py
how-long/how_long/: example_1.py  how_long.py
how-long/tests/: test_how_long.py
notebook-tutorials/built_in_functions/: Python built-in Functions.ipynb
notebook-tutorials/numpy_mstplotlib/: Numpy and Matplotlib.ipynb
real-python/real_python/: Understanding Async.md  async_tutorial.ipynb  lin_reg_example.py  linear_regression.md  multivariate_lin_reg.py  python_intertools.ipynb  python_intro_itertools.ipynb  text-classify.py
real-python/tests/: test_real_python.py
stats-models/stats_models/: OLS_Ex_2.ipynb  ordinary_least_squares.ipynb  ordinary_least_squares.py
stats-models/tests/: test_stats_models.py
tests/: test_tutorials.py
time-series/time_series/: arima-python.ipynb  ts_forecasting_w_python_etc.ipynb
w3-mongodb/: pyproject.toml
w3-mongodb/tests/: test_w3_mongodb.py
w3-mongodb/w3_mongodb/: w3_mongo_ex1.ipynb
