[tool.poetry]
name = "Tutorials"
version = "0.1.0"
description = ""
authors = ["TMCdmv <learn@TMCmd.net>"]

[tool.poetry.dependencies]
python = "~3.10"
pendulum = "^2.1.2"
numpy = "^1.22.4"
scikit-learn = "^1.1.1"
matplotlib = "^3.5.2"
pandas = "^1.4.2"
arviz = "^0.12.1"
ipykernel = "^6.13.1"
statsmodels = "^0.13.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"
pylint = "^2.14.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
